# GalaxySimulator

./: .gitignore  CMakeLists.txt
cmake/Modules/: FindOpenCL.cmake
inc/cuda/: cuda.hpp
inc/display/: Display.hpp
inc/logic/: Display.hpp  Map.hpp  Quadrant.hpp  QuadrantContainer.hpp  RootQuadrant.hpp  Star.hpp  StarContainer.hpp
inc/utils/: ISpacialInformations.hpp  SpacialInformations.hpp
src/: main.cpp
src/cuda/: computation.cu  test.cu
src/display/: Display.cpp
src/logic/: Display.cpp  Map.cpp  Quadrant.cpp  QuadrantContainer.cpp  RootQuadrant.cpp  Star.cpp  StarContainer.cpp
src/opencl/: computation.cl
src/utils/: ISpacialInformations.cpp  SpacialInformations.cpp
